--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,9 @@
     <script src="./controller/login.controller.js" charset="utf-8"></script>
     <script src="./controller/term.controller.js" charset="utf-8"></script>
     <script src="./controller/group.controller.js" charset="utf-8"></script>
+    <script src="./controller/company.controller.js" charset="utf-8"></script>
+    <script src="./controller/companyTerm.controller.js" charset="utf-8"></script>
+    <script src="./controller/companyGroups.controller.js" charset="utf-8"></script>
     <script src="./service/main.service.js" charset="utf-8"></script>
 
   </body>
