file write upload adding tems in ui

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,11 @@
     <script src="./node_modules/angular-ui-router/release/angular-ui-router.js" charset="utf-8"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.js" charset="utf-8"></script>
     <script src="./node_modules/angular-xeditable/dist/js/xeditable.js" charset="utf-8"></script>
+    <script src="./node_modules/angular-touch/angular-touch.js" charset="utf-8"></script>
+    <script src="./node_modules/angular-animate/angular-animate.js" charset="utf-8"></script>
+    <script src="./node_modules/angular-ui-bootstrap/dist/ui-bootstrap.js" charset="utf-8"></script>
+    <script src="./node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js" charset="utf-8"></script>
+
     <!-- <==============modules and controllers=======> -->
     <script src="./main/main.module.js" charset="utf-8"></script>
     <script src="./controller/main.controller.js" charset="utf-8"></script>
@@ -25,7 +30,8 @@
     <script src="./controller/company.controller.js" charset="utf-8"></script>
     <script src="./controller/companyTerm.controller.js" charset="utf-8"></script>
     <script src="./controller/companyGroups.controller.js" charset="utf-8"></script>
+    <script src="./controller/modal.instance.controller.js" charset="utf-8"></script>
     <script src="./service/main.service.js" charset="utf-8"></script>
-
+    <script src="./service/login.service.js" charset="utf-8"></script>
   </body>
 </html>
