changes to get name function

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
     <script src="./node_modules/ng-file-upload/dist/ng-file-upload-shim.min.js" charset="utf-8"></script>
     <script src="./node_modules/angular-file-upload/dist/angular-file-upload.min.js" charset="utf-8"></script>
     <script src="./node_modules/angular-socket-io/socket.js" charset="utf-8"></script>
+    <script src="./node_modules/q/q.js" charset="utf-8"></script>
     <!-- <==============modules and controllers=======> -->
     <script src="./main/main.module.js" charset="utf-8"></script>
     <script src="./controller/main.controller.js" charset="utf-8"></script>
